# core

./: CMakeLists.txt
src/: CMakeLists.txt  plugins.qmltypes  qmldir  systeminfo.cpp
